--- a/4.DF_FastAPi.ipynb
+++ b/4.DF_FastAPi.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 1,
       "metadata": {
         "id": "10WAiMggKJhh"
       },
@@ -259,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -274,7 +274,7 @@
               "{'Año de lanzamiento con más horas jugadas para Género RPG': 2011}"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -288,7 +288,7 @@
         "gender_hours = df_filtered_by_genre.groupby('release_date')['playtime_forever'].sum()\n",
         "max_time_play_gender = gender_hours.idxmax()\n",
         "result = {\n",
-        "  \"Año de lanzamiento con más horas jugadas para Género {}\".format(genre) : max_time_play_gender\n",
+        "  \"Año de lanzamiento con más horas jugadas para Género {}\".format(genre):max_time_play_gender\n",
         "  }\n",
         "result"
       ]
@@ -883,47 +883,104 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 75,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "  Codigo sentiment_analysis\n",
-            "0      0           Negativo\n",
-            "1      1             Neutro\n",
-            "2      2           Positivo\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "df_sentiment_analysis_names=[['Codigo','sentiment_analysis'],['0','Negativo'],['1','Neutro'],['2','Positivo']]\n",
-        "df_sentiment_analysis_names\n",
+        "# Crea Lista con codigos y nombres de sentiment_analysis\"\n",
+        "df_sentiment_analysis_names=[['sentiment_analysis','nombre'],['0','Negativo'],['1','Neutro'],['2','Positivo']]\n",
+        "\n",
+        "# extrae la cabecera de las lista\n",
         "headers = df_sentiment_analysis_names.pop(0)\n",
         "\n",
-        "# Create the DataFrame with the remaining lists as data and using the headers\n",
-        "df_sentiment_analysis_codes = pd.DataFrame(df_sentiment_analysis_names, columns=headers)\n",
-        "\n",
-        "# Display the DataFrame\n",
-        "print(df_sentiment_analysis_codes)"
+        "# Crea DataFrame con los datos restantes de la lista usando las cabeceras\n",
+        "df_sentiment_analysis_codes = pd.DataFrame(df_sentiment_analysis_names, columns=headers)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 84,
       "metadata": {},
       "outputs": [
         {
-          "ename": "AttributeError",
-          "evalue": "'str' object has no attribute 'counts_by_sentiment'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[25], line 49\u001b[0m\n\u001b[0;32m     46\u001b[0m     df_sentiment_analysis \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mconcat([df_sentiment_analysis, df], ignore_index\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m     48\u001b[0m df_sentiment_analysis\u001b[38;5;241m.\u001b[39mhead(\u001b[38;5;241m60\u001b[39m)\n\u001b[1;32m---> 49\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mNegativo: \u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcounts_by_sentiment\u001b[49m\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m))\u001b[38;5;66;03m#,\u001b[39;00m\n\u001b[0;32m     50\u001b[0m \u001b[38;5;66;03m#'Neutro': counts_by_sentiment.get(1, 0),\u001b[39;00m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;66;03m#'Positivo': counts_by_sentiment.get(2, 0)}\u001b[39;00m\n",
-            "\u001b[1;31mAttributeError\u001b[0m: 'str' object has no attribute 'counts_by_sentiment'"
-          ]
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>release_date</th>\n",
+              "      <th>sentiment_analysis</th>\n",
+              "      <th>Counted</th>\n",
+              "      <th>nombre</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1989</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Positivo</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1990</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Negativo</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1990</td>\n",
+              "      <td>2</td>\n",
+              "      <td>4</td>\n",
+              "      <td>Positivo</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1991</td>\n",
+              "      <td>2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>Positivo</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1992</td>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "      <td>Positivo</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "  release_date  sentiment_analysis Counted    nombre\n",
+              "0         1989                   2       1  Positivo\n",
+              "2         1990                   0       1  Negativo\n",
+              "1         1990                   2       4  Positivo\n",
+              "3         1991                   2       1  Positivo\n",
+              "4         1992                   2       3  Positivo"
+            ]
+          },
+          "execution_count": 84,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -937,58 +994,106 @@
         "#Merge de los dataframes de steam_games filtrados y user_reviews\n",
         "df_sgur_sa=pd.merge(df_sg_sa[['item_id', 'app_name','release_date']],df_ur[['item_id','sentiment_analysis']],on='item_id',how='inner')\n",
         "\n",
-        "# Creo Lista de Años\n",
+        "# Creo Lista de Años existentes y la ordeno\n",
         "df_años_diferentes = df_sgur_sa['release_date'].unique()\n",
         "df_años_diferentes.sort()\n",
-        "#df_años_diferentes\n",
         "\n",
-        "# Creo lista de años\n",
+        "# Creo lista de años a lenar\n",
         "sa_por_año = []\n",
-        "df_sentiment_analysis = pd.DataFrame(columns=['release_date', 'sentiment_analysis', 'Count'])\n",
+        "df_sentiment_analysis = pd.DataFrame(columns=['release_date', 'sentiment_analysis', 'Counted'])\n",
         "\n",
         "for año in df_años_diferentes:\n",
+        "    \n",
         "    # Filtramos las filas del género actual\n",
         "    df_año = df_sgur_sa[df_sgur_sa['release_date'] == año]\n",
+        "    \n",
         "    # Filtramos el usuario del género actual\n",
         "    if not df_año.empty:\n",
         "        \n",
         "        #Filtra por total de tipo de sentiment_analysis\n",
         "        df_sentiment_analysis_a = df_año['sentiment_analysis'].value_counts()\n",
-        "        #int(df_sentiment_analysis_a.get(0, 0))\n",
-        "        #print(df_año['sentiment_analysis'].value_counts())\n",
-        "        #df_año.head(60)\n",
-        "        #print(año)\n",
-        "        #print(df_sentiment_analysis_a.info())\n",
+        "\n",
         "        # Crea un DataFrame de la serie\n",
         "        top_sa_año_df = df_sentiment_analysis_a.reset_index()\n",
+        "\n",
         "        # Renombra la columna\n",
-        "        top_sa_año_df.columns = ['sentiment_analysis', 'Count']\n",
+        "        top_sa_año_df.columns = ['sentiment_analysis', 'Counted']\n",
+        "\n",
         "        # Añade una nueva columna con el valor del año\n",
         "        top_sa_año_df['release_date'] = df_año['release_date'].iloc[0]  \n",
         "\n",
         "        sa_por_año.append(top_sa_año_df)\n",
         "    else:\n",
         "        pass\n",
+        "\n",
         "# Convertimos los resultados en un DataFrame\n",
         "for df in sa_por_año:\n",
+        "\n",
         "    # Agregamos al DataFrame df_sentiment_analysis los dataframes de cada genero y usuario\n",
         "    df_sentiment_analysis = pd.concat([df_sentiment_analysis, df], ignore_index=True)\n",
         "\n",
-        "df_sentiment_analysis.head(60)\n",
-        "#print('Negativo: '.counts_by_sentiment.get(0, 0))#,\n",
-        "#'Neutro': counts_by_sentiment.get(1, 0),\n",
-        "#'Positivo': counts_by_sentiment.get(2, 0)}"
+        "# Convierto columnas a entero\n",
+        "df_sentiment_analysis['sentiment_analysis'] = df_sentiment_analysis['sentiment_analysis'].astype('int')\n",
+        "df_sentiment_analysis_codes['sentiment_analysis'] = df_sentiment_analysis_codes['sentiment_analysis'].astype('int')\n",
+        "\n",
+        "#Merge de los dataframes de df_sentiment_analysis y df_sentiment_analysis_codes\n",
+        "df_sa_sac=pd.merge(df_sentiment_analysis[['release_date', 'sentiment_analysis','Counted']],df_sentiment_analysis_codes[['sentiment_analysis','nombre']],on='sentiment_analysis',how='left')\n",
+        "df_sa_sac = df_sa_sac.sort_values(by=['release_date', 'sentiment_analysis'])\n",
+        "\n",
+        "# Muestra cabecera\n",
+        "df_sa_sac.head()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 85,
       "metadata": {},
       "outputs": [],
       "source": [
         "# Guardo Dataframe en df_UsersRecommend.csv\n",
         "# df_UsersRecommend.to_csv('/content/drive/MyDrive/PI_ML_OPS-PT/Dataset/df_UsersRecommend.csv',index=False)\n",
-        "df_sentiment_analysis.to_csv('./Dataset/df_sentiment_analysis.csv',index=False)"
+        "df_sa_sac.to_csv('./Dataset/df_sentiment_analysis.csv',index=False)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 87,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'Negativo': 4, 'Neutro': 2, 'Positivo': 10}"
+            ]
+          },
+          "execution_count": 87,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "#Funcion sentiment_analysis\n",
+        "year=1995\n",
+        "\n",
+        "# df_sentiment_analysis= pd.read_csv('/content/drive/MyDrive/PI_ML_OPS-PT/Dataset/df_sentiment_analysis.csv')\n",
+        "df_sentiment_analysis= pd.read_csv('./Dataset/df_sentiment_analysis.csv')\n",
+        "\n",
+        "# Filtra por año\n",
+        "df_filtered_by_year = df_sentiment_analysis[df_sentiment_analysis['release_date']==year]\n",
+        "\n",
+        "# Ordena por release_date y sentiment_analysis\n",
+        "df_filtered_by_year = df_filtered_by_year.sort_values(by=['release_date', 'sentiment_analysis'])\n",
+        "\n",
+        "# Resetea el indice\n",
+        "df_filtered_by_year.reset_index(drop=True, inplace=True)\n",
+        "\n",
+        "# Agrupa por nombre y suma Counted\n",
+        "sentiment_counts = df_filtered_by_year.groupby('nombre')['Counted'].sum()\n",
+        "\n",
+        "# Muestra los conteos en formato diccionario\n",
+        "result_dict = sentiment_counts.to_dict()\n",
+        "result_dict\n",
+        "#print(result_dict)"
       ]
     },
     {
